--- a/public/index.html
+++ b/public/index.html
@@ -3,72 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Login</title>
+    
+    <!-- Bootstrap 4.5 CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #f1f4f9;
         }
         .login-container {
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
         }
         .login-box {
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            padding: 30px;
+            border-radius: 10px;
+            background: white;
+            box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+        }
+        .form-control {
+            border-radius: 6px;
+        }
+        .btn-primary {
+            border-radius: 6px;
+        }
+        #response {
+            font-weight: 500;
         }
     </style>
 </head>
 <body>
-    <div class="container login-container">
-        <div class="login-box">
-            <h2 class="text-center">Login</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" class="form-control" id="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" class="form-control" id="password" required>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
-            </form>
-            <div id="response" class="mt-3"></div>
-        </div>
+
+<div class="container login-container">
+    <div class="login-box">
+        <h3 class="text-center mb-4">Login</h3>
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" class="form-control" placeholder="Enter your username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+        <div id="response" class="text-center mt-3 text-danger"></div>
     </div>
+</div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#loginForm').on('submit', function(e) {
-                e.preventDefault();
-                const username = $('#username').val();
-                const password = $('#password').val();
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#loginForm').on('submit', function (e) {
+            e.preventDefault();
+            const username = $('#username').val();
+            const password = $('#password').val();
 
-                $.ajax({
-                    url: '/api/login',
-                    method: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ username, password }),
-                    success: function(response) {
-                        // save local storege
-                        localStorage.setItem('login', 1);
-                        // redirect to home
-                        window.location.href = '/home';
-                        $('#response').text(response.message);
-                    },
-                    error: function(xhr) {
-                        $('#response').text(xhr.responseJSON.message);
-                    }
-                });
+            $.ajax({
+                url: '/api/login',
+                method: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({ username, password }),
+                success: function (response) {
+                    localStorage.setItem('login', 1);
+                    window.location.href = '/home';
+                },
+                error: function (xhr) {
+                    $('#response').text(xhr.responseJSON.message || 'Login gagal.');
+                }
             });
         });
-    </script>
+    });
+</script>
 </body>
 </html>
