--- a/public/users.html
+++ b/public/users.html
@@ -53,8 +53,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <script>
-   // console.log(allMenus_user)
-    let allMenus_user = ["accounts", "report", "transactions", "balance", "users"];
+    var allMenus_user = ["accounts", "report", "transactions", "balance", "users"];
 
     $(document).ready(function () {
       renderCheckboxes();
